# medic-ext-tool-versions

./: CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
medic-check-tool-versions/: Cargo.toml
medic-check-tool-versions/src/: lib.rs  main.rs
medic-check-tool-versions/src/cli/: app.rs
