[package]
name = "medic-check-tool-versions"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
indoc = { workspace = true }
medic-lib = { workspace = true }

[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
